# Navigation-for-the-GPS-Poor

./: .gitignore  AGENTS.md  LICENSE  README.md  VERIFICATION_REPORT.md  environment.yml  pyproject.toml  requirements.txt  setup_environment.sh  validate_notebooks.py
chapters/1/: demo.ipynb  generate_visualizations.py  index.md
chapters/1/images/: README.md  statistics.txt
chapters/2/: demo.ipynb  generate_visualizations.py  index.md
chapters/2/images/: statistics.txt
chapters/3/: demo.ipynb  generate_visualizations.py  index.md
chapters/3/images/: README.md  statistics.txt
chapters/4/: create_boneyard_flyover.py  create_challenging_conditions.py  generate_visualizations.py  improvements.md  index.md  quick_improvements.py
chapters/4/images/: README.md
scripts/: download_boneyard_imagery.py
src/: __init__.py  datasets.py  feature_matching.py  pose_estimation.py  slam.py  utils.py  visual_odometry.py
tests/: __init__.py  test_datasets.py  test_feature_matching.py
